fixed mapping of authorities, now i can use normal names in database without prefix ROLE_